Remove MaxPermSize options
Was removed in Java 8 so is ignored