@@ -928,7 +928,7 @@
 									<goal>test</goal>
 								</goals>
 								<configuration>
-									<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
+									<argLine>-Xmx1024m</argLine>
 									<skip>false</skip>
 									<includes>
 										<include>**/*IntegrationTest.java</include>
